wip, flash messages fixed up but bug with double submit, might have something to do with button and form_to overlapping for votes on the lifehack show page?

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -26,3 +26,7 @@
     font-size:15px;
   }
 }
+
+.spacer {
+  margin-bottom: rem-calc(50);
+}
